--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
             <version>3.5.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+            <version>3.5.0</version>
+        </dependency>
 
 
     </dependencies>
